--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ main{
     position: relative;
     overflow: hidden;
     border-radius: 3px;
+    transition: all 0.4s ease-in;
+    animation: appear 0.5s
 
 
 }
@@ -116,4 +118,9 @@ font-weight: bold;
 
 .movie:hover .overview{
     transform: translateY(0);
+}
+
+@keyframes appear{
+    from { scale:0.1; opacity: 0.1;}
+    to{scale: 1 ; opacity: 1;}
 }
